--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Home</title>
 </head>
 <body>
+    <header>
+        <img src="imagens/header.png" alt="header" width="900" height="300">
+    </header>
     <nav>
         <a href="index.html">Home</a> |
         <a href="aulas.html">Aulas</a> |
